# biorag

./: .gitignore  CLAUDE.md  Makefile  README.md  biorag  biorag_cli.py  build.sh  gaps_NRF2.json  pyproject.toml  run.sh  test_query.json  test_results.json  test_structured.py
.claude/: settings.local.json
scripts/: 01_extract_chunks.py  02_embed_and_index.py  03_rag_query.py  05_gene_investigation.py  06_hypothesis_generator.py  07_pathway_analysis.py
src/: __init__.py  embedder.py  pdf_processor.py  rag_pipeline.py  vector_store.py
src/bio_intelligence/: __init__.py  bio_apis.py  composed_modules.py  gap_detector.py  gene_resolver.py  hypothesis_generator.py
tests/: test_bio_intelligence.py
