[project]
name = "biorag"
version = "0.1.0"
description = "Biological PDF RAG System for scientific literature querying"
requires-python = ">=3.9"
dependencies = [
    "dspy-ai",
    "faiss-cpu",
    "openai",
    "pypdf",
    "pymupdf",
    "tiktoken",
    "python-dotenv",
    "jsonlines",
    "tqdm",
    "numpy",
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] 